<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="12dp"
    tools:context=".presentation.transaction.TransactionActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/blue"
            app:navigationIcon="@drawable/ic_arrow_back">

            <TextView
                style="@style/TitleTheme"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/list_menu_service"
                android:textColor="@color/white"/>

        </com.google.android.material.appbar.MaterialToolbar>

        <TextView
            android:id="@+id/tv_service"
            style="@style/textNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:textSize="18sp"
            android:text="@string/service_tran"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <Spinner
            android:id="@+id/sp_service"
            style="@style/textNormal"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:prompt="@string/product_jenis"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_service"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_berat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:hint="@string/berat"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sp_service"
            tools:ignore="Autofill">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_berat"
                style="@style/InputTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLogin" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvTotal"
            style="@style/textNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="12dp"
            android:textSize="20sp"
            android:text="@string/total_harga"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_berat" />

        <TextView
            android:id="@+id/tv_Rp"
            style="@style/textNormal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:text="@string/rupiah"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvTotal"
            app:layout_constraintStart_toEndOf="@+id/tvTotal"
            app:layout_constraintTop_toTopOf="@+id/tvTotal" />

        <TextView
            android:id="@+id/tv_Price"
            style="@style/textNormal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:text="40000"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_Rp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_Rp"
            app:layout_constraintTop_toTopOf="@+id/tv_Rp" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_order"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/btn_style"
            android:text="Pesan Sekarang"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_Rp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>